# tdcr-modeling

./: README.md
c++/: CMakeLists.txt  main.cpp
c++/include/: constantcurvaturemodel.h  cosseratrodmodel.h  piecewiseconstantcurvaturemodel.h  pseudorigidbodymodel.h  subsegmentcosseratrodmodel.h  tendondrivenrobot.h
c++/src/: constantcurvaturemodel.cpp  cosseratrodmodel.cpp  piecewiseconstantcurvaturemodel.cpp  pseudorigidbodymodel.cpp  subsegmentcosseratrodmodel.cpp  tendondrivenrobot.cpp
matlab/: main.asv  main.m
matlab/Models/CC/: CC_solver.m  calctendonlength.m  configuration.m  construct_tdcr_cc.m  coupletransformations.m  plot_tdcr_cc.m  trans_mat_cc.m
matlab/Models/CCsub/: CCsub_solver.m  construct_tdcr_ccsub.m  cross_product.m  plot_tdcr_ccsub.m  rotation_mat_ccsub.m  trans_mat_ccsub.m
matlab/Models/PRBM/: PRBM_solver.m  construct_tdcr_prbm.m  plot_tdcr_prbm.m  rotation_mat_prbm.m  trans_mat_prbm.m
matlab/Models/VC/: VC_solver.m  VCref_solver.asv  VCref_solver.m  boundcond.m  get_stiffness.m  intermedquant.m  lie.m  plot_tdcr_vc.m  setup_param_vc.m
matlab/Parameters/: tdcr_2segments.m
